@@ -1,6 +1,9 @@
 0.249 2025-09-16
   [Requirement Changes]
     * Require SPVM 0.990089.
+  [Document and Internal Changes]
+    * Remove "object of" from arguments.
+    
 0.248 2025-06-17
   [Requirement Changes]
     * Require SPVM 0.990068.
